# ft_printf_21

./: CMakeLists.txt  Makefile  author  buf_right_alignment.c  buffer.c  count_numbers.c  ft_atoi_precision.c  ft_atoi_width.c  ft_color_print.c  ft_count_until.c  ft_float.c  ft_hex.c  ft_int.c  ft_itoa.c  ft_long_double.c  ft_make_precision.c  ft_minus_str.c  ft_octal.c  ft_one.c  ft_printf.c  ft_printf.h  ft_printf_f.c  ft_remake_str.c  ft_size.c  ft_strjoin.c  ft_strncmp.c  ft_strnew.c  ft_strnew_one.c  ft_strnew_zero.c  ft_type_e.c  ft_type_e_l.c  ft_unsigned_int.c  inicialization.c  main.c  parser.c  parser_flag.c  parser_size.c  parser_type.c  print_percent.c  print_w_flag.c  (+3 more)
